Jumping header img on mobile fixed

--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 #header-heritage {
@@ -105,7 +104,6 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 #header-wines {
@@ -113,7 +111,6 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 #home-introduction {
